major updates - added delete lines and rotation

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div id="game" class="game">
-            <table>
+            <table class="game-table">
                 <tr id="grid-0">                    
                     <td id="grid-00"></td>
                     <td id="grid-01"></td>
@@ -246,6 +246,11 @@
                     <td id="grid-197"></td>
                     <td id="grid-198"></td>
                     <td id="grid-199"></td>
+                </tr>
+            </table>
+            <table class="score-table"></table>
+                <tr>
+                    <td>Lines: </td>
                 </tr>
             </table>
         </div>
